--- a/CampusHub/Components/_Imports.razor
+++ b/CampusHub/Components/_Imports.razor
@@ -7,4 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using CampusHub
-@using CampusHub.Components
+@using CampusHub.Presentation.Components
+@using CampusHub.Application.DTOs
+@using CampusHub.Application.Services
